[gd_scene load_steps=11 format=3 uid="uid://mjifqroreiaf"]

[ext_resource type="Script" path="res://Scripts/Zombie/fart_component.gd" id="1_jlfdi"]

[sub_resource type="Curve" id="Curve_mknvx"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.978261, 170.11), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0rh3c"]
curve = SubResource("Curve_mknvx")

[sub_resource type="Curve" id="Curve_3ngbb"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ksnl3"]
curve = SubResource("Curve_3ngbb")

[sub_resource type="Curve" id="Curve_ip4rt"]
_data = [Vector2(0, 0.032967), 0.0, 0.0, 0, 0, Vector2(0.362319, 0.78022), 0.0, 0.0, 0, 0, Vector2(0.695652, 0.769231), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_gpg3b"]
curve = SubResource("Curve_ip4rt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kseg0"]
emission_shape = 1
emission_sphere_radius = 0.2
angle_curve = SubResource("CurveTexture_0rh3c")
direction = Vector3(0, 1, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.4
radial_velocity_min = 0.1
radial_velocity_max = 0.2
radial_velocity_curve = SubResource("CurveTexture_ksnl3")
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_gpg3b")
color = Color(1, 1, 1, 0.396078)
turbulence_noise_strength = 9.76
turbulence_noise_scale = 10.0
turbulence_noise_speed_random = 1.77

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6koue"]
transparency = 1
albedo_color = Color(0, 0.435294, 0.00392157, 0.741176)
emission_enabled = true
emission = Color(0.502938, 0.772217, 0.267721, 1)
emission_energy_multiplier = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_4l8ba"]
material = SubResource("StandardMaterial3D_6koue")

[node name="FartComponent" type="Node3D"]
script = ExtResource("1_jlfdi")

[node name="FartTimer" type="Timer" parent="."]
one_shot = true

[node name="FartAudio" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 2
volume_db = -18.0

[node name="FartParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 30
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 0.12
process_material = SubResource("ParticleProcessMaterial_kseg0")
draw_pass_1 = SubResource("SphereMesh_4l8ba")

[connection signal="timeout" from="FartTimer" to="." method="_on_fart_timer_timeout"]
